# konfig

./: .bazelrc  .gitignore  .profiling-baseline.json  CLAUDE.md  Cargo.toml  MODULE.bazel  README.md  bazel-agent-a40960701241a74c0  bazel-bin  bazel-out  bazel-testlogs
.cargo/: config.toml
.github/workflows/: amd64-smoke.yml  ci.yml  coverage.yml  flamediff.yml  heap-profile-eval.yml  konfig-cli-release.yml  konfig-k8s-integration.yml  loadtest-acceptance.yml  loadtest-integration.yml  profile-release.yml  profiling.yml  publish-images.yml  streamprof-eval.yml  trivy.yml
bazel/oci/: BUILD.bazel  defs.bzl  transitions.bzl
bazel/sysroot/: docker_linux_sysroot.bzl
docker/konfig/: BUILD  BUILD.bazel  Dockerfile  docker-compose.yml  init.sh  load.sh  mongodb.yml  notes.txt  push.sh  replica.txt  start.sh  stop.sh
docker/konfig-cli/: BUILD.bazel  Dockerfile  build_linux.sh  build_linux_amd64.sh  build_linux_arm64.sh  build_macos_arm64.sh  load.sh  push.sh
docker/konfig-debug/: README.md
docker/konfig-heapprof/: BUILD.bazel
docker/konfig-loadtest/: BUILD.bazel
docker/snmalloc-tokio-smoke/: BUILD.bazel
docs/: architecture.md  cli.md  cluster-eval-runbook.md  codebase-audit-findings.md  configuration.md  cp-readiness.md  http-gateway.md  kms-encryption.md  mtls-rollout.md  multi-tenancy.md  runbook.md  sharded-broadcast.md  slo.md
docs/adr/: 0002-multi-tenancy-tenant-model.md  0003-kms-envelope-encryption.md
docs/observability/: README.md
docs/observability/traces/: apply-write.json  broadcast-fanout-100.json  subscribe-stream.json  watch-cache-update.json
infra/konfig/: BUILD.bazel  clusterrole-configmap.yaml  clusterrole.yaml  clusterrolebinding-configmap.yaml  clusterrolebinding.yaml  configacl-crd.yaml  configmap.yaml  configschema-crd.yaml  crd.yaml  deployment.yaml  example.yaml  kustomization.yaml  namespace.yaml  pdb.yaml  prometheus-rules.yaml  service.yaml  serviceaccount.yaml  tenantquota-crd.yaml
infra/konfig-loadtest/: job.yaml  seed-config.yaml
infra/konfig-loadtest/baselines/: README.md  v0.1.0.json
infra/konfig-prod/: BUILD.bazel  kustomization.yaml
infra/konfig/overlays/tenants/: README.md  generate.py  kustomization.yaml  networkpolicy-analytics.yaml  networkpolicy-payments.yaml  registry.yaml
infra/profiling/: jaeger-dev.yaml
infra/profiling/grafana-dashboards/: README.md  konfig-tenants.json  konfig-traces.json
proto/konfig/v0/common/: BUILD  context.proto  ops.proto  permission.proto  rule.proto  value.proto
proto/konfig/v0/model/: BUILD  configuration.proto  context.proto  namespace.proto  user.proto
proto/konfig/v0/service/: BUILD  configuration.proto  namespace.proto  permission.proto  user.proto
proto/konfig/v1/: konfig_service.proto
rust/konfig/: BUILD.bazel  Cargo.toml  acl.rs  build.rs  cache.rs  configmap_watcher.rs  cow_cache.rs  flamegraph.sh  import.rs  lib.rs  main.rs  metrics.rs  quota.rs  schema.rs  secret_cache.rs  secret_watcher.rs  snmalloc_tokio_smoke.rs  startup.rs  stream_sink.rs  telemetry.rs  tenant_cache.rs  trading.rs  types.rs  watcher.rs
rust/konfig-consumer/: BUILD.bazel  Cargo.toml  README.md  build.rs
rust/konfig-consumer/src/: lib.rs  metrics.rs  snapshot.rs  stream.rs
rust/konfig/grpc/: apply.rs  audit.rs  authz.rs  context.rs  drain.rs  get.rs  http_gateway.rs  identity.rs  mod.rs  read.rs  revert.rs  secret_apply.rs  secret_get.rs  serve.rs  service.rs  subscribe.rs  subscribe_secrets.rs
rust/konfig/grpc/subscribe/: broadcast.rs  filter.rs  replay.rs  test_support.rs  watch.rs
rust/konfig/tests/: cp_integration.rs  integration_grpc.rs  integration_revert.rs  integration_watch_timing.rs  integration_watcher.rs
rust/konfig/tests/common/: mod.rs
tools/: pin-image-tags.sh
tools/bazel/: github_credential_helper.py
tools/konfig-cli/: BUILD.bazel  Cargo.toml
tools/konfig-cli/src/: main.rs
tools/konfig-flamediff/: BUILD.bazel  Cargo.toml
tools/konfig-flamediff/src/: flamebearer.rs  gate.rs  main.rs
tools/konfig-loadtest/: BUILD.bazel  Cargo.toml  README.md
tools/konfig-loadtest/src/: args.rs  client.rs  main.rs  metrics.rs
tools/konfig-loadtest/src/scenarios/: backpressure.rs  get.rs  mod.rs  reconnect.rs  secrets.rs  soak.rs  subscribe.rs
tools/profiling/: BUILD.bazel  README.md  ci_capture_variant.sh  ci_release_capture.sh  flamebearer_to_pprof.py  flamediff.py  heap_delta.sh  import-images.sh  profiling_gate.py
