[workspace]
resolver = "2"
members = [
    "rust/konfig",
    "rust/konfig-consumer",
    "tools/konfig-cli",
    "tools/konfig-loadtest",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
homepage = "https://github.com/jayakasadev/konfig"
repository = "https://github.com/jayakasadev/konfig"

[workspace.dependencies]
arc-swap = {version = "1.9.1", default-features = false}
async-trait = "0.1.89"
base64 = {version = "0.22.1", default-features = false}
bytes = "1"
dashmap = {version = "6.2.1", default-features = false}
# Draft-07 JSON Schema validation for the Apply RPC (CU-86ahrwd5g). Operators
# register a schema per (namespace, configName) via the ConfigSchema CRD; the
# Apply handler compiles it once at CRD-load time and validates `content`
# before patching. `default-features = false` drops the `resolve-http`
# (reqwest + rustls) and `resolve-file` resolvers + the bundled TLS backend —
# konfig validates self-contained in-memory schemas with no external `$ref`
# resolution, so pulling a second HTTP/TLS stack into the service is pure cost.
jsonschema = {version = "0.46.5", default-features = false}
prost = "0.14.3"
prost-types = "0.14.3"
serde = {version = "1.0.228", default-features = false, features = ["derive"]}
serde_json = {version = "1.0.149", default-features = false, features = ["alloc"]}
thiserror = {version = "2.0.18", default-features = false}
tokio = {version = "1.52.3", features = ["full"], default-features = false}
tonic = {version = "0.14.6", features = ["tls-ring"]}
tonic-prost = "0.14.6"
tonic-prost-build = "0.14.6"
# grpc-Web protocol translation (CU-86ahzwhg4) so the Backstage browser plugin
# can reach konfig's gRPC server directly on port 50051 (no Envoy proxy). Pinned
# to 0.14.6 to track the workspace tonic 0.14.6 — tonic-web depends on
# `tonic ^0.14.6`, so a mismatched (e.g. 0.12) tonic-web would not compile.
tonic-web = "0.14.6"
tracing = {version = "0.1.44", features = ["attributes", "log", "async-await"]}
# mTLS client-identity extraction (Phase 8, CU-86ahrwd6h). Parses the peer
# leaf cert presented on the gRPC mTLS handshake to derive a client identity
# (SAN URI → Subject CN → "anonymous") for the audit log + later authz.
x509-parser = "0.18.1"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
