"""
konfig — generic Kubernetes config distribution service.

Standalone Bazel module. Consumed by other Bazel workspaces via:

    bazel_dep(name = "konfig", version = "0.1.0")
    git_override(
        module_name = "konfig",
        remote = "https://github.com/jayakasadev/konfig.git",
        commit = "<sha>",
    )

Public targets:
    @konfig//rust/konfig:konfig          — Rust library crate
    @konfig//rust/konfig:konfig_bin      — server binary
    @konfig//tools/konfig-cli:konfig_cli — CLI binary
    @konfig//proto/konfig/v1:konfig_service_proto — proto_library
"""

module(
    name = "konfig",
    version = "0.1.0",
)

##################################
# Core rules — always required
##################################
bazel_dep(name = "rules_rust", version = "")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "aspect_bazel_lib", version = "2.21.1")

# archive_override applies when konfig is the root module (standalone CI/dev).
# When konfig is used as a dep, the root workspace's override takes precedence
# and this one is silently ignored per bzlmod semantics.
archive_override(
    module_name = "rules_rust",
    integrity = "sha256-M0pWfqFlvnFwxMqJ2t56Yu7HveOtEZhup5qxHQTh2ig=",
    strip_prefix = "rules_rust-19beae81b7b97b2bf4135f9f2f1a6f63477adde2",
    urls = ["https://github.com/bazelbuild/rules_rust/archive/19beae81b7b97b2bf4135f9f2f1a6f63477adde2.tar.gz"],
)

archive_override(
    module_name = "toolchains_llvm",
    integrity = "sha256-rnk2El123pJdGmd3czxchUP2DOVe7caJtfeTqzKhgkM=",
    strip_prefix = "toolchains_llvm-3aad06c2d166cd89a09236694ecd9bf0f1c1b37d",
    urls = ["https://github.com/bazel-contrib/toolchains_llvm/archive/3aad06c2d166cd89a09236694ecd9bf0f1c1b37d.tar.gz"],
)

##################################
# Rust toolchain (dev only — root workspace provides when used as dep)
##################################
rust = use_extension(
    "@rules_rust//rust:extensions.bzl",
    "rust",
    dev_dependency = True,
)
rust.toolchain(
    edition = "2024",
    versions = ["1.95.0"],
)
use_repo(rust, "rust_toolchains")

register_toolchains(
    "@rust_toolchains//:all",
    dev_dependency = True,
)

##################################
# Protobuf
##################################
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "protobuf", version = "33.4")

##################################
# Shell rules (sh_binary — removed from Bazel 9 built-ins)
##################################
bazel_dep(name = "rules_shell", version = "0.6.1")

##################################
# OCI images (dev only — used for building/pushing the server image)
##################################
bazel_dep(name = "rules_oci", version = "2.3.0")
bazel_dep(name = "rules_pkg", version = "1.2.0")

oci = use_extension(
    "@rules_oci//oci:extensions.bzl",
    "oci",
    dev_dependency = True,
)
oci.pull(
    name = "distroless_cc",
    image = "gcr.io/distroless/cc-debian13",
    platforms = [
        "linux/amd64",
        "linux/arm64/v8",
    ],
    tag = "nonroot",
)
use_repo(
    oci,
    "distroless_cc",
    "distroless_cc_linux_amd64",
    "distroless_cc_linux_arm64_v8",
)

# Debug base for the `konfig-debug` image variant. Identical glibc + libgcc_s
# + libstdc++ runtime as `distroless_cc` above, but layered with busybox under
# /busybox/ so operators get /busybox/sh plus the standard busybox applets
# (ps, wget, nslookup, netstat, ...) for in-cluster triage. Same image family
# as distroless_cc → no ABI drift between the production and debug images.
oci.pull(
    name = "distroless_cc_debug",
    image = "gcr.io/distroless/cc-debian13",
    platforms = [
        "linux/amd64",
        "linux/arm64/v8",
    ],
    tag = "debug-nonroot",
)
use_repo(
    oci,
    "distroless_cc_debug",
    "distroless_cc_debug_linux_amd64",
    "distroless_cc_debug_linux_arm64_v8",
)

docker_linux_sysroot = use_repo_rule(
    "//bazel/sysroot:docker_linux_sysroot.bzl",
    "docker_linux_sysroot",
)

# Local Docker Desktop / Apple Silicon image builds need a Linux sysroot for
# snmalloc's C++ archive. This repository rule intentionally shells out to
# Docker + apt during repository fetch, so it is a local-development bridge,
# not a fully pinned CI sysroot. CI still builds each image on a native runner;
# if CI needs cross-host Linux image builds, replace this with a pinned sysroot
# archive or the @toolchains_llvm sysroot repository rule.
docker_linux_sysroot(name = "linux_aarch64_sysroot")

##################################
# LLVM cross-compilation toolchain (dev only)
##################################
bazel_dep(name = "toolchains_llvm", version = "1.7.0")

llvm = use_extension(
    "@toolchains_llvm//toolchain/extensions:llvm.bzl",
    "llvm",
    dev_dependency = True,
)

# Linux OCI builds compile C++ through snmalloc. `toolchains_llvm` only emits
# Linux cross-target toolchains when an explicit sysroot is configured; without
# one it emits host and freestanding toolchains only. Use the dynamic libstdc++
# runtime to match the distroless cc base image and avoid static libstdc++
# operator overrides.
llvm.toolchain(
    name = "konfig_llvm_toolchain",
    cxx_builtin_include_directories = {
        "linux-aarch64": [
            "%sysroot%/usr/include/c++/13",
            "%sysroot%/usr/include/aarch64-linux-gnu/c++/13",
        ],
    },
    cxx_standard = {"": "c++23"},
    extra_cxx_flags = {
        "linux-aarch64": [
            "-iwithsysroot",
            "/usr/include/c++/13",
            "-iwithsysroot",
            "/usr/include/aarch64-linux-gnu/c++/13",
        ],
    },
    llvm_versions = {
        "": "21.1.8",
        "darwin-aarch64": "20.1.8",
    },
    stdlib = {
        "linux-aarch64": "dynamic-stdc++",
        "linux-x86_64": "dynamic-stdc++",
    },
)
llvm.sysroot(
    name = "konfig_llvm_toolchain",
    label = "@linux_aarch64_sysroot//sysroot:sysroot",
    targets = ["linux-aarch64"],
)
use_repo(llvm, "konfig_llvm_toolchain", "konfig_llvm_toolchain_llvm")

register_toolchains(
    "@konfig_llvm_toolchain//:all",
    dev_dependency = True,
)

##################################
# Crate universe — konfig's Rust deps
# NOT dev_dependency: needed to build @konfig//rust/konfig:konfig targets
##################################
crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.from_cargo(
    name = "konfig_crates",
    cargo_lockfile = "//:Cargo.lock",
    manifests = [
        "//:Cargo.toml",
        "//rust/konfig:Cargo.toml",
        "//rust/konfig-consumer:Cargo.toml",
        "//tools/konfig-cli:Cargo.toml",
        "//tools/konfig-loadtest:Cargo.toml",
    ],
    supported_platform_triples = [
        "aarch64-apple-darwin",
        "aarch64-unknown-linux-gnu",
        "x86_64-unknown-linux-gnu",
    ],
)

# pyroscope + pyroscope_pprofrs are optional deps of the `konfig` crate, only
# pulled in by the `profiling` cargo feature (used by `:konfig_bin_profiling`
# and the `konfig-profiling` image). `cargo tree` without `--features` skips
# optional deps, so crate_universe wouldn't generate @konfig_crates targets
# for them off the lockfile alone. Listing them here as `crate.spec` forces
# the generation.
#
# Versions are pinned to the EXACT lockfile version (not a loose semver range
# like "0.5") so the crate.spec can never drift past what Cargo.lock resolves.
# A loose "0.5" spec would silently let crate_universe pick up a newer 0.5.x
# release on lockfile refresh without anyone noticing in review. Keep these
# in sync with Cargo.lock when bumping.
crate.spec(
    package = "pyroscope",
    version = "=0.5.8",
)
crate.spec(
    package = "pyroscope_pprofrs",
    version = "=0.2.10",
)

# console-subscriber is an optional dep of the `konfig` crate behind the
# `tokio_console` feature. Same pattern as pyroscope above — listed here so
# crate_universe materialises a Bazel target even when no rust_binary opts
# into the feature by default. Pinned exactly to the lockfile version for
# the same drift-prevention reason described above.
crate.spec(
    package = "console-subscriber",
    version = "=0.4.1",
)

# tokio + tokio-metrics + console-subscriber expose their full APIs (per-worker
# counters, park counts, blocking pool depth, tracing instrumentation) only
# behind `--cfg tokio_unstable`. The .bazelrc's global `extra_rustc_flags`
# does NOT propagate to crate_universe-generated targets, so set it per crate
# here. Tokio's `tokio_unstable`-gated APIs use its `tracing` dep, so the
# `tracing` feature is enabled on the konfig-crate dep declaration too.
crate.annotation(
    crate = "tokio",
    rustc_flags = ["--cfg=tokio_unstable"],
    # Tokio declares its `tracing` dependency under
    # [target."cfg(tokio_unstable)".dependencies.tracing], so `cargo metadata`
    # (which crate_universe uses to compute the dep graph) does NOT see it
    # without the cfg. Adding it as an extra dep here so the cfg-gated tokio
    # code paths that import `tracing::Span` link correctly.
    deps = ["@konfig_crates//:tracing"],
)
crate.annotation(
    crate = "tokio-metrics",
    rustc_flags = ["--cfg=tokio_unstable"],
)
crate.annotation(
    crate = "console-subscriber",
    rustc_flags = ["--cfg=tokio_unstable"],
)
use_repo(crate, "konfig_crates")

##################################
# snmalloc (default allocator, all OS) — pulled from jayakasadev fork.
# Bazel consumers depend on @snmalloc//snmalloc-rs:snmalloc_rs; Cargo
# users get the same crate via [patch.crates-io] in rust/konfig/Cargo.toml.
##################################
bazel_dep(name = "snmalloc", version = "0")
git_override(
    module_name = "snmalloc",
    commit = "e64cd355ff4f0291101d495f7e8e7d9d0821bfe9",
    remote = "https://github.com/jayakasadev/snmalloc.git",
)
