"""
konfig — generic Kubernetes config distribution service.

Standalone Bazel module. Consumed by other Bazel workspaces via:

    bazel_dep(name = "konfig", version = "0.1.0")
    git_override(
        module_name = "konfig",
        remote = "https://github.com/jayakasadev/konfig.git",
        commit = "<sha>",
    )

Public targets:
    @konfig//rust/konfig:konfig          — Rust library crate
    @konfig//rust/konfig:konfig_bin      — server binary
    @konfig//tools/konfig-cli:konfig_cli — CLI binary
    @konfig//proto/konfig/v1:konfig_service_proto — proto_library
"""

module(
    name = "konfig",
    version = "0.1.0",
)

##################################
# Core rules — always required
##################################
bazel_dep(name = "rules_rust", version = "")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "aspect_bazel_lib", version = "2.21.1")

# archive_override applies when konfig is the root module (standalone CI/dev).
# When konfig is used as a dep, the root workspace's override takes precedence
# and this one is silently ignored per bzlmod semantics.
archive_override(
    module_name = "rules_rust",
    integrity = "sha256-M0pWfqFlvnFwxMqJ2t56Yu7HveOtEZhup5qxHQTh2ig=",
    strip_prefix = "rules_rust-19beae81b7b97b2bf4135f9f2f1a6f63477adde2",
    urls = ["https://github.com/bazelbuild/rules_rust/archive/19beae81b7b97b2bf4135f9f2f1a6f63477adde2.tar.gz"],
)

archive_override(
    module_name = "toolchains_llvm",
    integrity = "sha256-rnk2El123pJdGmd3czxchUP2DOVe7caJtfeTqzKhgkM=",
    strip_prefix = "toolchains_llvm-3aad06c2d166cd89a09236694ecd9bf0f1c1b37d",
    urls = ["https://github.com/bazel-contrib/toolchains_llvm/archive/3aad06c2d166cd89a09236694ecd9bf0f1c1b37d.tar.gz"],
)

##################################
# Rust toolchain (dev only — root workspace provides when used as dep)
##################################
rust = use_extension(
    "@rules_rust//rust:extensions.bzl",
    "rust",
    dev_dependency = True,
)
rust.toolchain(
    edition = "2024",
    versions = ["1.95.0"],
)
use_repo(rust, "rust_toolchains")

register_toolchains(
    "@rust_toolchains//:all",
    dev_dependency = True,
)

##################################
# Protobuf
##################################
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "protobuf", version = "33.4")

##################################
# Shell rules (sh_binary — removed from Bazel 9 built-ins)
##################################
bazel_dep(name = "rules_shell", version = "0.6.1")

##################################
# OCI images (dev only — used for building/pushing the server image)
##################################
bazel_dep(name = "rules_oci", version = "2.3.0")
bazel_dep(name = "rules_pkg", version = "1.2.0")

oci = use_extension(
    "@rules_oci//oci:extensions.bzl",
    "oci",
    dev_dependency = True,
)
oci.pull(
    name = "distroless_cc",
    image = "gcr.io/distroless/cc-debian13",
    platforms = [
        "linux/amd64",
        "linux/arm64/v8",
    ],
    tag = "nonroot",
)
use_repo(
    oci,
    "distroless_cc",
    "distroless_cc_linux_amd64",
    "distroless_cc_linux_arm64_v8",
)

# Debug base for the `konfig-debug` image variant. Identical glibc + libgcc_s
# + libstdc++ runtime as `distroless_cc` above, but layered with busybox under
# /busybox/ so operators get /busybox/sh plus the standard busybox applets
# (ps, wget, nslookup, netstat, ...) for in-cluster triage. Same image family
# as distroless_cc → no ABI drift between the production and debug images.
oci.pull(
    name = "distroless_cc_debug",
    image = "gcr.io/distroless/cc-debian13",
    platforms = [
        "linux/amd64",
        "linux/arm64/v8",
    ],
    tag = "debug-nonroot",
)
use_repo(
    oci,
    "distroless_cc_debug",
    "distroless_cc_debug_linux_amd64",
    "distroless_cc_debug_linux_arm64_v8",
)

##################################
# LLVM toolchains (dev only — root workspace provides when used as a dep)
##################################
bazel_dep(name = "toolchains_llvm", version = "1.7.0")

llvm = use_extension(
    "@toolchains_llvm//toolchain/extensions:llvm.bzl",
    "llvm",
    dev_dependency = True,
)

# Two LLVM toolchains, split by exec host (mirrors CapitalIntent/capitalintent,
# CU-86aj7k844):
#
#   * konfig_llvm_toolchain (NATIVE) — host == target. No sysroot, so a Linux CI
#     build (exec == target == linux) compiles natively and macOS host builds /
#     `bazel test` use the macOS SDK. toolchains_llvm only emits Linux cross
#     toolchains when a sysroot is configured, so the native one never emits
#     (and never fetches) anything linux.
#   * konfig_llvm_toolchain_cross (CROSS) — macOS exec -> linux target only,
#     carrying the pinned Debian-trixie sysroot + libstdc++ flags. Registered
#     ONLY on a macOS host (.bazelrc `build:macos --extra_toolchains`), so a
#     Linux CI host never registers it and never resolves/fetches @sysroot_linux_*
#     (replaces the old Docker+apt sysroot, which needed Docker at fetch time).
llvm.toolchain(
    name = "konfig_llvm_toolchain",
    cxx_standard = {"": "c++23"},
    # snmalloc's aba.h hard-errors without 16-byte CAS (CMPXCHG16B), so the x86_64
    # C++ archive needs the x86-64-v2 floor (cx16 + sse4.2 + popcnt) the Rust side
    # already pins (.bazelrc, CU-86aj4guza). This applies on a NATIVE Linux x86_64
    # build (CI builds each image on its native runner) where target == host ==
    # linux-x86_64; the cross toolchain below carries the same flag for the
    # macOS -> linux-x86_64 path. aarch64 needs no march (LSE atomics).
    extra_cxx_flags = {
        "linux-x86_64": [
            "-march=x86-64-v2",
        ],
    },
    llvm_versions = {
        "": "21.1.8",
        "darwin-aarch64": "20.1.8",
    },
)

# The macOS LLVM distribution ships only Mach-O libc++, so linux cross targets
# link libstdc++ from the Debian-trixie sysroot below. dynamic-stdc++ (NOT
# static) is deliberate: snmalloc overrides the global operator new/delete, and a
# statically linked libstdc++ would drag in its own operator definitions and
# clash; the distroless/cc-debian13 runtime ships libstdc++.so to satisfy the
# dynamic link. The ruleset's auto builtin-include dirs cover libc++ + the C
# headers only, so the GCC-14 libstdc++ header dirs are declared explicitly per
# target (Debian trixie == glibc 2.41 / GCC 14 — matches the runtime base image).
llvm.toolchain(
    name = "konfig_llvm_toolchain_cross",
    cxx_builtin_include_directories = {
        "linux-aarch64": [
            "%sysroot%/usr/include/c++/14",
            "%sysroot%/usr/include/aarch64-linux-gnu/c++/14",
            "%sysroot%/usr/include/c++/14/backward",
            "%sysroot%/usr/lib/gcc/aarch64-linux-gnu/14/include",
        ],
        "linux-x86_64": [
            "%sysroot%/usr/include/c++/14",
            "%sysroot%/usr/include/x86_64-linux-gnu/c++/14",
            "%sysroot%/usr/include/c++/14/backward",
            "%sysroot%/usr/lib/gcc/x86_64-linux-gnu/14/include",
        ],
    },
    cxx_flags = {
        "linux-aarch64": [
            "-stdlib=libstdc++",
            "-isystem=/usr/include/c++/14",
            "-isystem=/usr/include/aarch64-linux-gnu/c++/14",
            "-isystem=/usr/include/c++/14/backward",
        ],
        # snmalloc's aba.h hard-errors without 16-byte CAS (CMPXCHG16B). The
        # Bazel-native snmalloc-rs cc_library (new pin) no longer sets -mcx16
        # the way the old foreign_cc cmake build did, so the C++ archive must
        # carry the same x86-64-v2 floor the Rust side already pins
        # (.bazelrc, CU-86aj4guza). v2 == cx16 + sse4.2 + popcnt.
        "linux-x86_64": [
            "-stdlib=libstdc++",
            "-isystem=/usr/include/c++/14",
            "-isystem=/usr/include/x86_64-linux-gnu/c++/14",
            "-isystem=/usr/include/c++/14/backward",
            "-march=x86-64-v2",
        ],
    },
    cxx_standard = {"": "c++23"},
    llvm_versions = {
        "": "21.1.8",
        "darwin-aarch64": "20.1.8",
    },
    stdlib = {
        "linux-aarch64": "dynamic-stdc++",
        "linux-x86_64": "dynamic-stdc++",
    },
)
llvm.sysroot(
    name = "konfig_llvm_toolchain_cross",
    label = "@sysroot_linux_arm64//:sysroot",
    targets = ["linux-aarch64"],
)
llvm.sysroot(
    name = "konfig_llvm_toolchain_cross",
    label = "@sysroot_linux_x86_64//:sysroot",
    targets = ["linux-x86_64"],
)
use_repo(
    llvm,
    "konfig_llvm_toolchain",
    "konfig_llvm_toolchain_cross",
    "konfig_llvm_toolchain_cross_llvm",
    "konfig_llvm_toolchain_llvm",
)

# Register ONLY the native toolchain unconditionally. The cross toolchain is
# registered host-conditionally in .bazelrc:
#   build:macos --extra_toolchains=@konfig_llvm_toolchain_cross//:all
# so a Linux CI host never registers it and never fetches @sysroot_linux_*.
register_toolchains(
    "@konfig_llvm_toolchain//:all",
    dev_dependency = True,
)

# Pinned Debian-trixie linux sysroots for the mac->linux C++ cross-compile,
# fetched lazily and ONLY by the cross toolchain (macOS exec). A Linux CI host
# never selects that toolchain, so it never fetches these (CU-86aj7k844).
#
# These reuse CapitalIntent/capitalintent's already-generated, sha256-pinned
# tarballs (Debian-trixie, glibc 2.41, GCC 14 — produced by that repo's
# //docker/coinbase:gen_sysroot and matching distroless/cc-debian13, konfig's
# runtime base). The repo is PRIVATE, so the URLs point at the GitHub *API asset*
# endpoint and rely on the credential helper (.bazelrc --credential_helper),
# satisfied by $GH_TOKEN/$GITHUB_TOKEN (CI) or `gh auth token` (dev). Re-pin only
# when that release's assets change.
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

_SYSROOT_BUILD = """\
filegroup(
    name = "sysroot",
    # Exclude paths with spaces — glob() rejects them and the sysroot has none.
    srcs = glob(["**"], exclude = ["**/* *"]),
    visibility = ["//visibility:public"],
)
"""

_ASSET = "https://api.github.com/repos/CapitalIntent/capitalintent/releases/assets"

http_archive(
    name = "sysroot_linux_arm64",
    build_file_content = _SYSROOT_BUILD,
    integrity = "sha256-NkLaUHN8pJDmefd4IVOqlx8gt6Pu8TZr2OvJrjPP608=",
    strip_prefix = "sysroot",
    # API asset URLs have no archive suffix, so declare the format explicitly.
    type = "tar.zst",
    urls = [_ASSET + "/456011942"],  # sysroot_linux_arm64.tar.zst
)

http_archive(
    name = "sysroot_linux_x86_64",
    build_file_content = _SYSROOT_BUILD,
    integrity = "sha256-dt1V1qLrnqTcwSI/MsqwQThYTxU3E7szvmo+9cloSsQ=",
    strip_prefix = "sysroot",
    type = "tar.zst",
    urls = [_ASSET + "/456011943"],  # sysroot_linux_x86_64.tar.zst
)

##################################
# Crate universe — konfig's Rust deps
# NOT dev_dependency: needed to build @konfig//rust/konfig:konfig targets
##################################
crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.from_cargo(
    name = "konfig_crates",
    cargo_lockfile = "//:Cargo.lock",
    # rules_rust discovers the workspace members from the root [workspace]
    # manifest + Cargo.lock; the per-crate manifests are redundant (the ruleset
    # emits an INFO saying only //:Cargo.toml is required). CU-86aj7k844.
    manifests = ["//:Cargo.toml"],
    supported_platform_triples = [
        "aarch64-apple-darwin",
        "aarch64-unknown-linux-gnu",
        "x86_64-unknown-linux-gnu",
    ],
)

# pyroscope + pyroscope_pprofrs are optional deps of the `konfig` crate, only
# pulled in by the `profiling` cargo feature (used by `:konfig_bin_profiling`
# and the `konfig-profiling` image). `cargo tree` without `--features` skips
# optional deps, so crate_universe wouldn't generate @konfig_crates targets
# for them off the lockfile alone. Listing them here as `crate.spec` forces
# the generation.
#
# Versions are pinned to the EXACT lockfile version (not a loose semver range
# like "0.5") so the crate.spec can never drift past what Cargo.lock resolves.
# A loose "0.5" spec would silently let crate_universe pick up a newer 0.5.x
# release on lockfile refresh without anyone noticing in review. Keep these
# in sync with Cargo.lock when bumping.
crate.spec(
    package = "pyroscope",
    version = "=0.5.8",
)
crate.spec(
    package = "pyroscope_pprofrs",
    version = "=0.2.10",
)

# console-subscriber is an optional dep of the `konfig` crate behind the
# `tokio_console` feature. Same pattern as pyroscope above — listed here so
# crate_universe materialises a Bazel target even when no rust_binary opts
# into the feature by default. Pinned exactly to the lockfile version for
# the same drift-prevention reason described above.
crate.spec(
    package = "console-subscriber",
    version = "=0.4.1",
)

# tokio + tokio-metrics + console-subscriber expose their full APIs (per-worker
# counters, park counts, blocking pool depth, tracing instrumentation) only
# behind `--cfg tokio_unstable`. The .bazelrc's global `extra_rustc_flags`
# does NOT propagate to crate_universe-generated targets, so set it per crate
# here. Tokio's `tokio_unstable`-gated APIs use its `tracing` dep, so the
# `tracing` feature is enabled on the konfig-crate dep declaration too.
crate.annotation(
    crate = "tokio",
    rustc_flags = ["--cfg=tokio_unstable"],
    # Tokio declares its `tracing` dependency under
    # [target."cfg(tokio_unstable)".dependencies.tracing], so `cargo metadata`
    # (which crate_universe uses to compute the dep graph) does NOT see it
    # without the cfg. Adding it as an extra dep here so the cfg-gated tokio
    # code paths that import `tracing::Span` link correctly.
    deps = ["@konfig_crates//:tracing"],
)
crate.annotation(
    crate = "tokio-metrics",
    rustc_flags = ["--cfg=tokio_unstable"],
)
crate.annotation(
    crate = "console-subscriber",
    rustc_flags = ["--cfg=tokio_unstable"],
)
use_repo(crate, "konfig_crates")

##################################
# snmalloc (default allocator, all OS) — pulled from jayakasadev fork.
# Bazel consumers depend on @snmalloc//snmalloc-rs:snmalloc_rs; Cargo
# users get the same crate via [patch.crates-io] in rust/konfig/Cargo.toml.
##################################
bazel_dep(name = "snmalloc", version = "0")
git_override(
    module_name = "snmalloc",
    commit = "e64cd355ff4f0291101d495f7e8e7d9d0821bfe9",
    remote = "https://github.com/jayakasadev/snmalloc.git",
)
