[package]
name = "konfig-consumer"
version.workspace = true
edition.workspace = true
publish = false
homepage.workspace = true
repository.workspace = true

[lib]
name = "konfig_consumer"
path = "src/lib.rs"

[dependencies]
arc-swap = {workspace = true}
async-stream = "0.3"
futures-util = "0.3"
prometheus = {version = "0.14", default-features = false}
prost = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
thiserror = {workspace = true}
tokio = {workspace = true, features = ["full"]}
tonic = {workspace = true}
tonic-prost = {workspace = true}
tracing = {workspace = true}

[build-dependencies]
tonic-prost-build = {workspace = true}

[dev-dependencies]
tokio = {version = "1.52.3", features = ["test-util", "macros", "rt"]}

[lints.clippy]
std_instead_of_core = "allow"
std_instead_of_alloc = "allow"
