load("@rules_rust//cargo:defs.bzl", "cargo_build_script")
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_clippy", "rust_doc", "rust_doc_test", "rust_library", "rust_test", "rustfmt_test")

# Run build.rs to generate protobuf/tonic bindings into OUT_DIR.
# The proto file is available in the sandbox at
#   proto/konfig/v1/konfig_service.proto
# which matches the relative path "../../proto/konfig/v1/..." used in build.rs
# when CARGO_MANIFEST_DIR = <execroot>/rust/konfig.
cargo_build_script(
    name = "konfig_bs",
    srcs = ["build.rs"],
    build_script_env = {
        "PROTOC": "$(execpath @protobuf//:protoc)",
    },
    data = ["//proto/konfig/v1:konfig_service.proto"],
    tools = ["@protobuf//:protoc"],
    deps = ["@konfig_crates//:tonic-prost-build"],
)

# Library — all sources except main.rs (binary entry point).
rust_library(
    name = "konfig",
    srcs = glob(
        ["**/*.rs"],
        exclude = [
            "main.rs",
            "build.rs",
            "tests/**",
        ],
    ),
    tags = ["konfig", "rust"],
    visibility = ["//visibility:public"],
    deps = [
        ":konfig_bs",
        "@konfig_crates//:arc-swap",
        "@konfig_crates//:axum",
        "@konfig_crates//:base64",
        "@konfig_crates//:bytes",
        "@konfig_crates//:clap",
        "@konfig_crates//:dashmap",
        "@konfig_crates//:futures-util",
        "@konfig_crates//:k8s-openapi",
        "@konfig_crates//:kube",
        "@konfig_crates//:lazy_static",
        "@konfig_crates//:prometheus",
        "@konfig_crates//:prost",
        "@konfig_crates//:serde",
        "@konfig_crates//:serde_json",
        "@konfig_crates//:serde_yaml",
        "@konfig_crates//:thiserror",
        "@konfig_crates//:tokio",
        "@konfig_crates//:tokio-metrics",
        "@konfig_crates//:tokio-stream",
        "@konfig_crates//:tonic",
        "@konfig_crates//:tonic-health",
        "@konfig_crates//:tonic-prost",
        "@konfig_crates//:tracing",
        "@konfig_crates//:tracing-subscriber",
    ],
    proc_macro_deps = ["@konfig_crates//:async-trait"],
)

# Heap-profiling library variant — same sources as `:konfig` but built
# with `--cfg feature="snmalloc_profiling"`, which compiles in the
# `/debug/heap-profile.pprof` handler in `startup::serve_metrics` and
# adds `snmalloc-rs` as a direct library dep so the handler can call
# `SnMalloc.snapshot().write_pprof_gz(...)`. Renames to `konfig` via
# `crate_name` so binaries that depend on this target keep using the
# unmodified `use konfig::startup::run` import.
rust_library(
    name = "konfig_heapprof",
    srcs = glob(
        ["**/*.rs"],
        exclude = [
            "main.rs",
            "build.rs",
            "tests/**",
        ],
    ),
    crate_features = [
        "snmalloc",
        "snmalloc_profiling",
    ],
    crate_name = "konfig",
    tags = ["konfig", "rust", "heapprof"],
    visibility = ["//visibility:public"],
    deps = [
        ":konfig_bs",
        "@konfig_crates//:arc-swap",
        "@konfig_crates//:axum",
        "@konfig_crates//:base64",
        "@konfig_crates//:bytes",
        "@konfig_crates//:clap",
        "@konfig_crates//:dashmap",
        "@konfig_crates//:futures-util",
        "@konfig_crates//:k8s-openapi",
        "@konfig_crates//:kube",
        "@konfig_crates//:lazy_static",
        "@konfig_crates//:prometheus",
        "@konfig_crates//:prost",
        "@konfig_crates//:serde",
        "@konfig_crates//:serde_json",
        "@konfig_crates//:serde_yaml",
        "@konfig_crates//:thiserror",
        "@konfig_crates//:tokio",
        "@konfig_crates//:tokio-metrics",
        "@konfig_crates//:tokio-stream",
        "@konfig_crates//:tonic",
        "@konfig_crates//:tonic-health",
        "@konfig_crates//:tonic-prost",
        "@konfig_crates//:tracing",
        "@konfig_crates//:tracing-subscriber",
        # Profiling-build allocator (jayakasadev fork) — required by the
        # `/debug/heap-profile.pprof` handler. The C archive carries
        # `SNMALLOC_PROFILE=ON` and the Rust surface exposes
        # `HeapProfile::write_pprof_gz`.
        "@snmalloc//snmalloc-rs:snmalloc_rs_profiling",
    ],
    proc_macro_deps = ["@konfig_crates//:async-trait"],
)

# Server binary — standalone konfig server entry point.
# Direct crate deps required: standard rust_binary does not inherit library deps.
#
# stamp = 1: link workspace_status_command (tools/workspace_status.sh) output
# into the build. STABLE_GIT_SHA / STABLE_BUILD_TIMESTAMP / STABLE_VERSION are
# emitted into stable-status.txt; rustc_env_files wiring is a TODO for a
# follow-up PR to expose them as compile-time env vars to the binary.
rust_binary(
    name = "konfig_bin",
    srcs = ["main.rs"],
    # Enables the `#[global_allocator]` block in `main.rs` and pairs with
    # the `@snmalloc//snmalloc-rs:snmalloc_rs` dep below.
    crate_features = ["snmalloc"],
    stamp = 1,
    tags = ["konfig", "rust"],
    visibility = ["//visibility:public"],
    deps = [
        ":konfig",
        "@konfig_crates//:axum",
        "@konfig_crates//:clap",
        "@konfig_crates//:dashmap",
        "@konfig_crates//:kube",
        "@konfig_crates//:prometheus",
        "@konfig_crates//:tokio",
        "@konfig_crates//:tonic-health",
        "@konfig_crates//:tracing",
        "@konfig_crates//:tracing-subscriber",
        # Default allocator (all OS): snmalloc from jayakasadev fork.
        "@snmalloc//snmalloc-rs:snmalloc_rs",
    ],
)

# Opt-in profiling binary — same sources as `:konfig_bin` but built with
# `--cfg feature="profiling"`, which pulls in pyroscope-rs and compiles the
# agent init block in `main.rs`. Packaged separately as the `konfig-profiling`
# image; the default `konfig` image stays slim.
rust_binary(
    name = "konfig_bin_profiling",
    srcs = ["main.rs"],
    crate_features = [
        "profiling",
        "snmalloc",
    ],
    stamp = 1,
    tags = ["konfig", "rust", "profiling"],
    visibility = ["//visibility:public"],
    deps = [
        ":konfig",
        "@konfig_crates//:axum",
        "@konfig_crates//:clap",
        "@konfig_crates//:dashmap",
        "@konfig_crates//:kube",
        "@konfig_crates//:prometheus",
        "@konfig_crates//:pyroscope",
        "@konfig_crates//:pyroscope_pprofrs",
        "@konfig_crates//:tokio",
        "@konfig_crates//:tonic-health",
        "@konfig_crates//:tracing",
        "@konfig_crates//:tracing-subscriber",
        # Default allocator (all OS): snmalloc from jayakasadev fork.
        "@snmalloc//snmalloc-rs:snmalloc_rs",
    ],
)

# Opt-in heap-profiling binary — same sources as `:konfig_bin` but built
# with `--cfg feature="snmalloc_profiling"`, which compiles in the
# `/debug/heap-profile.pprof` endpoint in `startup::serve_metrics`. The
# snmalloc dep swaps to `:snmalloc_rs_profiling` (fork-built with the
# `profiling` Cargo feature on snmalloc-rs + the matching
# `SNMALLOC_PROFILE=ON` C archive), which exposes
# `SnMalloc.snapshot()` and `HeapProfile::write_pprof_gz`. Packaged
# separately as the `konfig-heapprof` image; the default `konfig` image
# stays slim.
rust_binary(
    name = "konfig_bin_heapprof",
    srcs = ["main.rs"],
    crate_features = [
        "snmalloc",
        "snmalloc_profiling",
    ],
    stamp = 1,
    tags = ["konfig", "rust", "heapprof"],
    visibility = ["//visibility:public"],
    deps = [
        ":konfig_heapprof",
        "@konfig_crates//:axum",
        "@konfig_crates//:clap",
        "@konfig_crates//:dashmap",
        "@konfig_crates//:kube",
        "@konfig_crates//:prometheus",
        "@konfig_crates//:tokio",
        "@konfig_crates//:tonic-health",
        "@konfig_crates//:tracing",
        "@konfig_crates//:tracing-subscriber",
        # Profiling-build allocator from jayakasadev fork. Exposes the
        # `HeapProfile` / `write_pprof_gz` API that the
        # `/debug/heap-profile.pprof` endpoint depends on.
        "@snmalloc//snmalloc-rs:snmalloc_rs_profiling",
    ],
)

rust_test(
    name = "test",
    size = "small",
    crate = ":konfig",
    # Serialise test execution within the `:konfig` rust_test target.
    # Several metric tests share the process-global `prometheus::default_registry`
    # (e.g. `bridge_broadcast_records_obs2_stage_histograms`, the
    # `metrics::tests::*` family); concurrent observation/increment by parallel
    # tests races on the same counter and produces non-deterministic
    # `left: N right: M` assertion failures (see CU-86aj23ttp). Forcing
    # single-threaded execution within the target eliminates that race
    # without touching the prod code path. Bazel still runs different
    # `rust_test` targets in parallel.
    env = {"RUST_TEST_THREADS": "1"},
    tags = ["konfig", "rust", "unit"],
)

# Heap-profiling test variant — same source set as `:test` but built
# against `:konfig_heapprof` (snmalloc_profiling feature on). Catches
# API breakage in the `#[cfg(feature = "snmalloc_profiling")]` arm of
# `startup::heap_profile_handler` even though the default `:test`
# target never compiles that branch. Wired into CI alongside `:test`.
rust_test(
    name = "test_heapprof",
    size = "small",
    crate = ":konfig_heapprof",
    env = {"RUST_TEST_THREADS": "1"},
    tags = ["konfig", "rust", "heapprof", "unit"],
)

# Rustdoc — `bazel build //rust/konfig:doc` to produce HTML docs.
rust_doc(
    name = "doc",
    crate = ":konfig",
    tags = ["konfig", "rust"],
)

# Doc tests — runs any ``` examples embedded in /// rustdoc comments.
rust_doc_test(
    name = "doc_test",
    crate = ":konfig",
    tags = ["konfig", "rust", "unit"],
)

rustfmt_test(
    name = "fmt_test",
    size = "small",
    tags = ["konfig", "rust", "unit"],
    targets = [":konfig"],
)

rust_clippy(
    name = "clippy_test",
    testonly = True,
    tags = ["konfig", "rust", "unit"],
    deps = [":konfig"],
)
